Fix card heading spacing

--- a/app/assets/stylesheets/layouts/homepage/l-featured-insights.scss
+++ b/app/assets/stylesheets/layouts/homepage/l-featured-insights.scss
@@ -1,7 +1,7 @@
 .l-featured-insights {
   margin: 0 0 40px;
 
-  .title {
+  .heading {
     margin: 0 0 40px;
   }
 
